--- a/configs/hunyuanvideo/config.yaml
+++ b/configs/hunyuanvideo/config.yaml
@@ -9,7 +9,7 @@ tag: test
 # Generation parameters
 seed: 42
 num-layers: 60
-num-inference-steps: 50
+num-inference-steps: 10
 
 # Performance testing parameters
 warmup: 0
@@ -22,8 +22,9 @@ node: null
 do-cfg-parallel: false
 
 # Baseline experiment parameters
+use-ringfusion: false
 use-ulysses: false
-use-distrifusion: false
+use-distrifusion: true
 use-easy-cache: false
 
 # StrideMap configuration
