--- a/configs/hunyuanvideo/config.yaml
+++ b/configs/hunyuanvideo/config.yaml
@@ -3,13 +3,14 @@
 # Basic parameters
 model-name: hunyuanvideo
 ditango-base: ./ditango/
-output-fn: ./Tango_evaluate/motiv
-tag: test
+output-fn: ./result
+tag: arxiv_version
 
 # Generation parameters
 seed: 42
 num-layers: 60
 num-inference-steps: 50
+use-timer: true
 
 # Performance testing parameters
 warmup: 0
@@ -22,10 +23,10 @@ node: null
 do-cfg-parallel: false
 
 # Baseline experiment parameters
-use-ringfusion: false
+use-ringfusion: true
 use-ulysses: false
 use-distrifusion: false
-use-easy-cache: true
+use-easy-cache: false
 
 # StrideMap configuration
 stride-dividers: [8, 4, 2, 1]  # Divider values from largest stride to smallest
