--- a/configs/cogvideox-5b/config.yaml
+++ b/configs/cogvideox-5b/config.yaml
@@ -4,7 +4,7 @@
 model-name: cogvideox-5b
 ditango-base: ./ditango/
 output-fn: ./result/
-tag: test
+tag: redun
 
 # Generation parameters
 seed: 42
@@ -12,13 +12,10 @@ num-layers: 42
 num-inference-steps: 50
 
 # Performance testing parameters
-warmup: 0
-repeat: 2
-enable-timing: false
+enable-timing: true
+do-preprocess: false
 
 # Distributed parameters
-gpus: null
-node: null
 do-cfg-parallel: false
 
 # Baseline experiment parameters
@@ -27,6 +24,6 @@ use-ulysses: false
 use-distrifusion: false
 use-easy-cache: false
 
-# StrideMap configuration
+# RedundancyMap configuration
 stride-dividers: [8, 4, 2, 1]  # Divider values from largest stride to smallest
 stride-percentiles: [0, 40, 90]  # Percentile thresholds for redundancy mapping
