--- a/configs/hunyuanvideo/config.yaml
+++ b/configs/hunyuanvideo/config.yaml
@@ -14,7 +14,7 @@ num-inference-steps: 50
 # Performance testing parameters
 warmup: 0
 repeat: 2
-enable-timing: false
+enable-timing: true
 
 # Distributed parameters
 gpus: null
@@ -27,6 +27,6 @@ use-ulysses: false
 use-distrifusion: false
 use-easy-cache: false
 
-# StrideMap configuration
+# RedundancyMap configuration
 stride-dividers: [8, 4, 2, 1]  # Divider values from largest stride to smallest
 stride-percentiles: [0, 40, 90]  # Percentile thresholds for redundancy mapping
