sample and preprocess for StepVideo

--- a/configs/stepvideo/config.yaml
+++ b/configs/stepvideo/config.yaml
@@ -12,17 +12,14 @@ num-layers: 48
 num-inference-steps: 50
 
 # Performance testing parameters
-warmup: 0
-repeat: 2
-enable-timing: false
+enable-timing: true
+do-preprocess: false
 
 # Distributed parameters
-gpus: null
-node: null
 do-cfg-parallel: false
 
 # Baseline experiment parameters
-use-ringfusion: false
+use-ringfusion: true
 use-ulysses: false
 use-distrifusion: false
 use-easy-cache: false
